Fix chart x-axis shift and add ACH calc

--- a/src/app/main/abt/abt.scss
+++ b/src/app/main/abt/abt.scss
@@ -76,3 +76,14 @@
 }
 
 .dashed { stroke-dasharray: 5,5; }
+
+#chart g.nv-scatter g.nv-series-0 path.nv-point
+{
+    fill-opacity: 1;
+    stroke-opacity: 1;
+    stroke-width: 5px;
+}
+#chart g.nv-series-0 path.nv-line
+{
+    stroke-opacity: 0;
+}
